backport BURP-Error RML-LV RER